// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MembersPanel > should display an empty result if no matching members found 1`] = `
"<div class="ml-2">
  <div data-v-8440503a="" role="search" class="oc-search flex items-center mr-2 mt-4">
    <div data-v-8440503a="" class="flex-1 relative"><input data-v-8440503a="" id="search-input-v-0" class="oc-search-input oc-input disabled:cursor-not-allowed focus:bg-none focus:outline focus:outline-offset-2 focus:outline-white h-9" aria-label="Filter members" placeholder="Search for members" type="search">
      <oc-button-stub data-v-8440503a="" arialabel="Search" appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="true" class="absolute top-[50%] transform-[translateY(-50%)] right-0 mx-4 mb-4 mt-0"></oc-button-stub>
    </div>
    <div data-v-8440503a="" class="oc-search-button-wrapper sr-only">
      <oc-button-stub data-v-8440503a="" appearance="filled" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-search-button z-0 ml-4 rounded-l-none transform-[translateX(-1px)]"></oc-button-stub>
    </div>
    <!--v-if-->
  </div>
  <div data-testid="space-members">
    <div>
      <h3 class="font-semibold text-base">No members found</h3>
    </div>
    <div>
      <!--v-if-->
    </div>
    <div>
      <!--v-if-->
    </div>
    <div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`MembersPanel > should render all members accordingly to their role assignments 1`] = `
"<div class="ml-2">
  <div data-v-8440503a="" role="search" class="oc-search flex items-center mr-2 mt-4">
    <div data-v-8440503a="" class="flex-1 relative"><input data-v-8440503a="" id="search-input-v-0" class="oc-search-input oc-input disabled:cursor-not-allowed focus:bg-none focus:outline focus:outline-offset-2 focus:outline-white h-9" aria-label="Filter members" placeholder="Search for members" type="search">
      <oc-button-stub data-v-8440503a="" arialabel="Search" appearance="raw" colorrole="secondary" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="true" class="absolute top-[50%] transform-[translateY(-50%)] right-0 mx-4 mb-4 mt-0"></oc-button-stub>
    </div>
    <div data-v-8440503a="" class="oc-search-button-wrapper sr-only">
      <oc-button-stub data-v-8440503a="" appearance="filled" colorrole="secondary" disabled="true" gapsize="medium" justifycontent="center" showspinner="false" size="medium" submit="button" type="button" nohover="false" class="oc-search-button z-0 ml-4 rounded-l-none transform-[translateX(-1px)]"></oc-button-stub>
    </div>
    <!--v-if-->
  </div>
  <div data-testid="space-members">
    <!--v-if-->
    <div>
      <div class="mb-4" data-testid="space-members-role-Managers">
        <h3 class="font-semibold text-base">Managers</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <div>
      <div class="mb-4" data-testid="space-members-role-Editors">
        <h3 class="font-semibold text-base">Editors</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <div>
      <div class="mb-4" data-testid="space-members-role-Viewers">
        <h3 class="font-semibold text-base">Viewers</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
